--- a/default.conf
+++ b/default.conf
@@ -12,8 +12,8 @@ server {
   }
   # OPTIONAL: For an API server you want to proxy
   location /api {
-   proxy_pass http://localhost:8081;
-	#proxy_pass http://172.18.0.2:8080;   
+    #proxy_pass http://localhost:8081;
+    proxy_pass http://172.19.0.2:8080;   
 	#docker network address
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
@@ -22,8 +22,8 @@ server {
     proxy_cache_bypass $http_upgrade;
   }
   location /account {
-   proxy_pass http://localhost:8081;
-    #proxy_pass http://172.18.0.3:8081;
+    #proxy_pass http://localhost:8081;
+    proxy_pass http://172.19.0.3:8081;
 	#docker network address
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
