--- a/default.conf
+++ b/default.conf
@@ -12,8 +12,9 @@ server {
   }
   # OPTIONAL: For an API server you want to proxy
   location /api {
-    #proxy_pass http://localhost:8081;
-    proxy_pass http://172.19.0.2:8080;   
+    #proxy_pass http://localhost:8080;
+    #proxy_pass http://172.19.0.2:8080;
+    proxy_pass http://10.111.80.135:8080;   
 	#docker network address
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
@@ -23,7 +24,8 @@ server {
   }
   location /account {
     #proxy_pass http://localhost:8081;
-    proxy_pass http://172.19.0.3:8081;
+    #proxy_pass http://172.19.0.3:8081;
+    proxy_pass http://10.105.21.113:8081;
 	#docker network address
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
